contador tiempo, show time, format time

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="game-container">
         <div class="lives-container">
             <p>Lives: <span class="lives"></span></p>
+            <p>Time: <span class="time"></span>⌛</p>
         </div>
 
         <canvas id="game"></canvas>
