show time and record when the player win

--- a/index.html
+++ b/index.html
@@ -60,6 +60,16 @@
         <h2 class="subtittle">Great job, you won!</h2>
         <span class="emoji-span" id="win-emoji"></span>
         <p id="result-game"></p>
+        <div class="info-resume-container">
+            <div>
+                <p>Time:</p>
+                <h3 id="time-resume"></h3>
+            </div>
+            <div>
+                <p>Record:</p>
+                <h3 id="record-resume"></h3>
+            </div>
+        </div>
         <button class="main-button" id="button-time" onclick="reload()">Play again</button>
     </section>
     
