--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <section class="welcome-game">
         <div class="welcome-game-container">
-            <h1 class="main-title">Wizard Adventures</h1>
+            <h1 class="main-title">Wizard's Rush</h1>
             <div>
                 <div class="info-start-game">
                     <p>Hey adventurer!🎉<br>
