name Wizard's Rush

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         Ready, set, sparkle!🚀</p>
                     <button class="main-button" id="start">Start Game</button>
                 </div>
-                <img src="/pictures/wizard-illustration.png" alt="A cartoon-style wizard stands against a purple background, wearing a tall pointed hat and long robe in matching purple hues. His flowing white beard and mustache dominate his face, with only his eyes visible. He holds a wooden staff in one hand and gestures with the other, as if explaining something. The character's expression and pose convey a friendly, approachable demeanor, making him appear wise yet affable. Golden accents on his hat and belt add a touch of mystical flair to his outfit.">
+                <a href="https://imgur.com/OxqUp3S"><img src="https://i.imgur.com/OxqUp3S.png" title="source: imgur.com" /></a>
             </div>
         </div>
     </section>
