--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         Ready, set, sparkle!🚀</p>
                     <button class="main-button" id="start">Start Game</button>
                 </div>
-                <a href="https://imgur.com/OxqUp3S"><img id="main-image-wizard" src="https://i.imgur.com/OxqUp3S.png" title="source: imgur.com" /></a>
+                <a class="image-start-game" href="https://imgur.com/OxqUp3S"><img id="main-image-wizard" src="https://i.imgur.com/OxqUp3S.png" title="source: imgur.com" /></a>
             </div>
         </div>
     </section>
