css fixing img problems

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="welcome-game">
         <div class="welcome-game-container">
             <h1 class="main-title">Wizard's Rush</h1>
-            <div>
+            <div class="content-container">
                 <div class="info-start-game">
                     <p>Hey adventurer!🎉<br>
                         Grab diamonds to level up!💎<br>
