--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
             <button id="right" type="button">Right</button>
         </div>
 
-        <div class="messages-container">
-            <!-- TODO -->
+        <!-- <div class="messages-container">
             <p id="result">...</p>
-        </div>
+        </div> -->
     </section>
     <section class="lose-game inactive">
         <h2 class="subtittle">Bummer, you lost the game!</h2>
